--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -6,7 +6,7 @@ permissions:
 
 on:
   pull_request:
-    branches: [ dev ] # dev 브랜치에 풀리퀘스트 보낼 떄 발생
+    branches: [ main ] # dev 브랜치에 풀리퀘스트 보낼 떄 발생
 
 jobs:
   test:
